--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,7 +21,7 @@ jobs:
         run: pip install requests
 
       - name: Run script
-        run: python script.py
+        run: python extraccion.py
 
       - name: Commit and push changes
         run: |
