--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -23,13 +23,13 @@ jobs:
       - name: Run script
         run: python extraccion.py
 
-      # List files in the directory to check if GeoJSON file exists
+      # List files to ensure the GeoJSON exists
       - name: List files in the directory
         run: |
           echo "Listing files in the directory"
           ls -l
 
-      # Verify if the file exists and then commit
+      # Add and commit only if the file exists
       - name: Check if GeoJSON file exists and commit changes
         run: |
           if [ -f "aemet_alerts.geojson" ]; then
