--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -42,3 +42,4 @@ jobs:
           else
             echo "GeoJSON file does not exist."
             exit 1
+          fi  # Asegúrate de cerrar el bloque if
