--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -40,3 +40,4 @@ jobs:
           else
             echo "GeoJSON file does not exist."
             exit 1
+          fi  # Aquí cerramos correctamente el bloque if
