--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,10 +1,3 @@
-name: Actualizar Avisos AEMET
-
-on:
-  schedule:
-    - cron: "*/30 * * * *"  # Cada 30 minutos
-  workflow_dispatch:  # Permite ejecutarlo manualmente desde GitHub
-
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -12,6 +5,60 @@ jobs:
     steps:
       - name: Clonar el repositorio
         uses: actions/checkout@v4
+
+      - name: Crear config.json
+        run: |
+          echo '{ "url_tar": "jobs:
+  update:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clonar el repositorio
+        uses: actions/checkout@v4
+
+      - name: Crear config.json
+        run: |
+          echo '{ "url_tar": "jobs:
+  update:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Clonar el repositorio
+        uses: actions/checkout@v4
+
+      - name: Crear config.json
+        run: |
+          echo '{ "url_tar": "https://www.aemet.es/es/geojson/download/avisos/geojson_1740870000.tar.gz" }' > config.json
+
+      - name: Instalar dependencias
+        run: pip install requests
+
+      - name: Ejecutar script de procesamiento
+        run: python procesar_geojson.py
+
+      - name: Commit y push si hay cambios
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+          git add avisos_espana.geojson
+          git commit -m "Actualización automática del GeoJSON" || exit 0
+          git push
+" }' > config.json
+
+      - name: Instalar dependencias
+        run: pip install requests
+
+      - name: Ejecutar script de procesamiento
+        run: python procesar_geojson.py
+
+      - name: Commit y push si hay cambios
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "actions@github.com"
+          git add avisos_espana.geojson
+          git commit -m "Actualización automática del GeoJSON" || exit 0
+          git push
+" }' > config.json
 
       - name: Instalar dependencias
         run: pip install requests
