--- a/config.json
+++ b/config.json
@@ -1,2 +1,3 @@
 {
-    "url_tar": "https://www.aemet.es/es/geojson/download/avisos/geojson_1740956400.tar.gz"}
+    "url_tar": "https://www.aemet.es/es/geojson/download/avisos/geojson_1740956400.tar.gz"
+}
