--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "URL_TAR": "https://www.aemet.es/es/geojson/download/avisos/geojson_1740956400.tar.gz"
+    "url_tar": "https://www.aemet.es/es/geojson/download/avisos/geojson_1740956400.tar.gz"
 }
