--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -2,27 +2,35 @@ name: Actualizar Avisos AEMET
 
 on:
   schedule:
-    - cron: "*/10 * * * *"  # Cada 10 minutos
-  workflow_dispatch:  # Permite ejecutarlo manualmente desde GitHub
+    - cron: '*/10 * * * *'  # Ejecutar cada 5 minutos
+  workflow_dispatch:  # Permite ejecutar manualmente desde la interfaz de GitHub
 
 jobs:
-  update:
+  actualizar:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Clonar el repositorio
-        uses: actions/checkout@v4
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Instalar dependencias
-        run: pip install requests
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.9'
 
-      - name: Ejecutar script de procesamiento
-        run: python procesar_geojson.py
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install requests
 
-      - name: Commit y push si hay cambios
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "actions@github.com"
-          git add avisos_espana.geojson
-          git commit -m "Actualización automática del GeoJSON" || exit 0
-          git push
+    - name: Run python procesar_geojson.py
+      run: python procesar_geojson.py
+
+    - name: Commit and push changes
+      run: |
+        git config --global user.email "your-email@example.com"
+        git config --global user.name "Your Name"
+        git status  # Añadir esta línea
+        git add avisos_espana.geojson
+        git commit -m "Update avisos_espana.geojson" || echo "No changes to commit"
+        git push origin main
