--- a/config.json
+++ b/config.json
@@ -1,3 +1,3 @@
 {
-    "url_tar": "https://www.aemet.es/es/geojson/download/avisos/geojson_1741089600.tar.gz"
+    "url_tar": "https://github.com/WireNext/aemetAvisos/blob/main/geojson_001.tar.gz"
 }
